# www2any

./: README.md  pyproject.toml
src/: __init__.py  __main__.py  app.py  llm.py  parser.py  scraper.py
src/static/: index.html
tests/: conftest.py  test_llm.py  test_parser.py  test_scraper.py
